# embedded

lib/CC1101/: CC1101.c  CC1101.h  CC1101_regs.h  CC1101_setting.c
lib/CC1101/11/: CC1101.c  main.c
lib/Somfy/: somfy.c  somfy.h
lib/cc1101/: cc1101.c
lib/cc1101/11/: CC1101.h
lib/hormann/: hormann.c  hormann.h
lib/itap/: itap.c  itap.h
lib/semtech/sx1276/sx1276-old/: sx1276.c  sx1276.h
lib/spi/: spi_driver.c  spi_driver.h
lib/st7789/: st7789.c
lib/timer/: timer.c  timer.h
projects/nordic_bt/: main.c  main_IO_toggled.c  syscalls.c
projects/nordic_bt/ble_dtm/: ble_dtm.c  ble_dtm.h
projects/nordic_bt/build_pca10028/: Makefile  direct_test_mode_gcc_nrf51.ld
projects/nordic_bt/build_pca10040/: Makefile
projects/nordic_bt/build_pca10056/: Makefile
projects/nordic_bt/build_pca10100/: Makefile  direct_test_mode_gcc_nrf52.ld
projects/nordic_cc1101/: .gitignore  main.c  sdk_config.h  smartrf_setting_CC1101.h
projects/nordic_rak831/: main.c
projects/nordic_sx1276/: board.h  main.c  sdk_config.h
projects/pico_display/: CMakeLists.txt  build.sh  main.c
projects/pico_temp/: CMakeLists.txt  main.c
projects/silabs_temp/: MakeFile  Makefile  main.c  mystartup.c
projects/stm32_temp/: main.c  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.c  stm32f4xx_it.h
